# chatbert

./: .gitignore  CONVERSATION_LOG.md  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
cloud/: fix_remaining.sh  launch.sh  setup_prime.sh  train_all.sh  train_cloud.sh
configs/: ed_base.yaml  ed_small.yaml  ed_small_smoltalk.yaml  gpt2_baseline.yaml  imr_small.yaml  imr_small_smoltalk.yaml
configs/ablations/: ed_dailydialog_only.yaml  ed_decoder_depth_2.yaml  ed_decoder_depth_6.yaml  ed_frozen_encoder.yaml  ed_lr_1e4.yaml  ed_lr_1e5.yaml
docs/: index.html
paper/: chatbert_paper.md
results/: chatbert_ed_small.json  chatbert_ed_small_empathetic.json  chatbert_ed_small_smoltalk.json  chatbert_ed_small_topical.json  chatbert_ed_small_wow.json  chatbert_imr_small.json  chatbert_imr_small_empathetic.json  chatbert_imr_small_smoltalk.json  chatbert_imr_small_topical.json  chatbert_imr_small_wow.json  gpt2_baseline.json  gpt2_baseline_empathetic.json  gpt2_baseline_topical.json  gpt2_baseline_wow.json
results/ablations/: ed_dailydialog_only.json  ed_decoder_depth_2.json  ed_decoder_depth_6.json  ed_frozen_encoder.json  ed_lr_1e4.json  ed_lr_1e5.json
results/comparison/: comparison_table.md
results/imr_analysis/: analysis_summary.json  confidence_evolution.json  mask_schedule_comparison.json  quality_vs_iterations.json  trace_Do_you_have_any_pets.csv  trace_Hello,_how_are_you?.csv  trace_I_had_a_terrible_day.csv  trace_Tell_me_about_yourse.csv  (+1 more)
scripts/: analyze_imr.py  compare_results.py  demo.py  download_data.py  evaluate.py  generate_figures.py  push_to_hub.py  run_ablations.py  run_cross_domain_eval.sh  train.py  train_gpt2_baseline.py
site/: blog.md  index.html
(+16 files in other folders)
